[metadata]
name = FinancialModelingPrep-Python
version = 0.0.4
author = Thinh Vu
author_email = support@thinhvu.com
description = Financial Modeling Prep API Python Implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/FinancialModelingPrep
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
